[package]
name = "uniswap-v4-sdk"
version = "1.0.0"
edition = "2021"
rust-version = "1.88"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V4 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v4-sdk-rs"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["uniswap-v4", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy = { version = "1.1", optional = true, default-features = false, features = ["contract"] }
alloy-contract = { version = "1.1", optional = true, default-features = false }
alloy-primitives = { version = "1.3", default-features = false }
alloy-sol-types = { version = "1.3", default-features = false }
derive_more = { version = "2", default-features = false, features = ["deref", "deref_mut", "from"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1.47", optional = true, default-features = false, features = ["macros"] }
uniswap-sdk-core = "6.0.0"
uniswap-v3-sdk = "6.0.0"

[dev-dependencies]
alloy = { version = "1.0.23", default-features = false, features = ["provider-anvil-node", "reqwest-rustls-tls", "signer-local"] }
dotenv = "0.15"
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2", default-features = false }
once_cell = "1.21"
tokio = { version = "1.47", features = ["full"] }

[features]
default = []
std = [
    "alloy-sol-types/std",
    "alloy?/std",
    "thiserror/std",
    "uniswap-sdk-core/std",
    "uniswap-v3-sdk/std"
]
extensions = [
    "alloy",
    "alloy-contract",
    "tokio",
    "uniswap-v3-sdk/extensions"
]

[[example]]
name = "mint_position_basic"
required-features = ["extensions"]

[[example]]
name = "mint_position_permit2"
required-features = ["extensions"]

[[example]]
name = "increase_liquidity"
required-features = ["extensions"]
